--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,7 +1,7 @@
 contracts:
-  - packages/contracts/**/*
-  - packages/contracts/*
+  - changed-files:
+    - any-glob-to-any-file: 'packages/contracts/**/*'
 
 subgraph:
-  - packages/subgraph/**/*
-  - packages/subgraph/*
+  - changed-files:
+    - any-glob-to-any-file: 'packages/subgraph/**/*'
