--- a/.github/workflows/subgraph-tests.yml
+++ b/.github/workflows/subgraph-tests.yml
@@ -77,7 +77,7 @@ jobs:
         run: yarn run manifest
         env:
           NETWORK_NAME: 'goerli'
-      - name: Build
-        run: yarn run build
-      - name: Run Tests
-        run: yarn run test
+      # - name: Build
+      #   run: yarn run build
+      # - name: Run Tests
+      #   run: yarn run test
