--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,3 +1,3 @@
 contracts:
-  - packages/contracts/**/*
-  - packages/contracts/*
+  - changed-files:
+      - any-glob-to-any-file: 'packages/contracts/**/*'
